--- a/app/templates/macros/cookie_consent.html
+++ b/app/templates/macros/cookie_consent.html
@@ -9,8 +9,7 @@
             <p class="cookie-consent-description mb-0">
                 Мы используем куки для улучшения работы сайта, аналитики и персонализации контента. Продолжая
                 использовать сайт, вы соглашаетесь с нашей
-                <a href="{{ url_for('main.privacy') }}" target="_blank" class="cookie-consent-link">политикой
-                    конфиденциальности</a>.
+                <a href="{{ url_for('main.privacy') }}" target="_blank" class="cookie-consent-link">политикой конфиденциальности</a>.
             </p>
         </div>
         <div class="cookie-consent-actions">
